fix email page text box overflow on mobile issue

--- a/_sass/hydeout/_base.scss
+++ b/_sass/hydeout/_base.scss
@@ -101,3 +101,7 @@ button, input[type="submit"] {
     box-shadow: $default-box-shadow;
   }
 }
+
+input, textarea {
+    max-width: 100%;
+}
